# glosupchain

./: .gitignore  README.md
agent/: add_test_ships.py  alembic.ini  check_db_status.py  db_status_output.txt  debug_db.py  debug_db_ships.py  debug_hazards.py  discover_mmsis.py  ecosystem.config.js  main.py  pyproject.toml  reset_db_version.py  run_output.txt  test_chatbot_tools.py  test_services.py
agent/alembic/: env.py
agent/alembic/versions/: 5fa3a9fb61cf_proper_init.py  cbbfe61d0655_update_location_schema.py  d50d1c1ffd8e_harmonize_models_and_schema.py
agent/api/: chatbot_routes.py
agent/core/: config.py  constants.py
agent/db/: init_db.py  session.py
agent/models/: __init__.py  extraModels.py  keyword.py  location.py  message.py  news.py  shipReroutes.py  shipwaysResult.py  user.py  weather.py  weatherResult.py
agent/scratch/: brute_force_models.py  check_langchain_models.py  check_models.py
agent/services/: news_service.py  weather_service.py
agent/tools/: chatbot.py  memory_tool.py  ship_reroute_tool.py  shipway_tool.py  weather_tool.py
fullstack/: package-lock.json
fullstack/supply-chain/components/: AffectedZonesMap.tsx  Footer.tsx  Navbar.tsx  RoadManagerRouteForm.tsx  RouteMap.tsx  ShipReroutesMap.tsx  ShipRouteMap.tsx  WeatherAlertsMap.tsx  WeatherRoutesMap.tsx
model/: .env.example  README.md  requirements.txt
model/app/: main.py  run_app.py
model/app/api/: routes.py  schemas.py
model/app/core/: config.py
model/app/utils/: driver_assignment.py  maps.py  news.py  smart_routing.py  traffic.py  weather.py
(+1 files in other folders)
